decalrar variables y funciones en un componente

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<p>HEADER WORKS!!!</p>
+<!-- para renderizar algo desde nuestro componente debemos usar los => {{ }} <= Esto se llama interpolacion -->
+<p>EL RESULTADO ES: {{ resultado }}</p>
+<!-- los eventos en Angular se capturan usando los parentesis -->
+<button (click)="sumar(15,5)">SUMAR</button>
